# aemics-stm32g4xx-hal

./: Cargo.toml  README.md
.cargo/: config
examples/: blinky.rs  blinky_timer_delay.rs  i2c.rs  i2c_old.rs  i2c_transaction.rs  led_interrupt.rs  pwm.rs  spi_transfer.rs  spi_transfer_in_place.rs  timer_countdown.rs  usb_echo.rs  usb_print.rs
src/: adc.rs  dac.rs  delay.rs  gpio.rs  hal_api_custom.rs  i2c.rs  lib.rs  opamp.rs  prelude.rs  preludes.rs  pwm.rs  spi.rs  spi_compat.rs  time.rs  timer.rs  usb.rs
src/custom_hal_api/: Cargo.toml
src/custom_hal_api/src/: adc.rs  lib.rs  usart.rs
src/dma/: transfer.rs
src/hal_api_custom/: adc.rs  timer.rs  usart.rs
src/preludes/: default.rs  delay.rs  digital.rs  gpio.rs  i2c.rs  interrupts.rs  spi.rs  timers.rs  usb.rs
src/rcc/: config.rs  mod.rs
src/serial/: usart.rs
