[package]
authors = ["Wybren van den Akker"]
categories = ["embedded", "hardware-support", "no-std"]
description = "Peripheral access API for STM32G4 series microcontrollers"
edition = "2021"
keywords = ["arm", "cortex-m", "stm32g4xx", "hal"]
name = "aemics-stm32g4xx-hal"
readme = "README.md"
version = "0.0.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nb = "1.1.0"
stm32g4 = "0.15.1"
bare-metal = "1.0.0"
embedded-hal-02 = { package = "embedded-hal", version = "0.2.7", features = ["unproven"] }
embedded-hal-1 = { package = "embedded-hal", version = "1.0" }
bitflags = "2.4.2"
vcell = "0.1.3"
static_assertions = "1.1.0"

[dependencies.defmt]
version = "0.3.2"
optional = true

[dev-dependencies]
cortex-m-rt = "0.7.3"
cortex-m-rtic = "1.1.4"
cortex-m-semihosting = "0.5.0"
panic-semihosting = "0.6.0"
cortex-m-log = { version = "0.8.0", features = ["log-integration"] }

[features]
default = ["rt","stm32g473", "embedded-hal-1"]
rt = ["stm32g4/rt"]
stm32g431 = ["stm32g4/stm32g431"]
stm32g441 = ["stm32g4/stm32g441"]
stm32g471 = ["stm32g4/stm32g471"]
stm32g473 = ["stm32g4/stm32g473"]
stm32g474 = ["stm32g4/stm32g474"]
stm32g483 = ["stm32g4/stm32g483"]
stm32g484 = ["stm32g4/stm32g484"]
stm32g491 = ["stm32g4/stm32g491"]
stm32g4a1 = ["stm32g4/stm32g4a1"]
log-itm = ["cortex-m-log/itm"]
log-rtt = []
log-semihost = ["cortex-m-log/semihosting"]
defmt-logging = ["defmt"]

[profile.dev]
codegen-units = 1
debug = true
incremental = false
lto = false

[profile.release]
debug = false
codegen-units = 1
incremental = false
lto = true
