workspace = { members = ["src/custom_hal_api"] }
[package]
authors = ["Wybren van den Akker"]
categories = ["embedded", "hardware-support", "no-std"]
description = "Peripheral access API for STM32G473"
edition = "2021"
keywords = ["arm", "cortex-m", "stm32g4xx", "hal"]
name = "aemics-stm32g4xx-hal"
readme = "README.md"
version = "0.1.0"

#[overflow_checks]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nb = "1.1.0"
stm32g4 = "0.15.1"
paste = "1.0"
bitflags = "2.5.0"
vcell = "0.1.3"
static_assertions = "1.1.0"
fugit = "0.3.5"
cortex-m-rt = "0.7.3"
panic-semihosting = "0.6.0"
custom_hal_api = { path = "src/custom_hal_api"}

embedded-io = "0.6.1" #API crate for IO (serial communication) functionality.

#Ignore the warnings here, the stm32-usbd crate needs these packages.
usb-device = "0.2.7"
usbd-serial = "0.1.1"
stm32-usbd = "0.6.0"

#Old embedded-hal version for backwards compatibility.
[dependencies.embedded-hal-02]
package = "embedded-hal"
version = "0.2.7" #ignore the warning here, we need this version (0.2.7).
features = ["unproven"]

#Current embedded-hal version.
[dependencies.embedded-hal-1]
package = "embedded-hal"
version = "1.0"

[dependencies.cortex-m]
version = "0.7.7"
features = ["critical-section-single-core"]

[dependencies.fdcan] #Standalone crate for STM32 FDCAN functionality. Does not implement embedded-can currently.
version = "0.2.0"
features = ["fdcan_g0_g4_l5"]

[dependencies.cast]
version = "0.3.0"
default-features = false

[dependencies.bare-metal]
version = "1.0.0"

[dependencies.embedded-dma]
version = "0.2.0"

[dependencies.void]
default-features = false
version = "1.0.2"

[dependencies.stable_deref_trait]
default-features = false
version = "1.1"

[dependencies.defmt]
version = "0.3.2"
optional = true




[dev-dependencies]
defmt-rtt = "0.4.0"
cortex-m-rtic = "1.1.4"
cortex-m-semihosting = "0.5.0"
panic-probe = { version = "0.3.0", features = ["print-defmt"] }
panic-halt = "0.2.0"
panic-itm = "0.4.2"
lazy_static = { version = "1.4", features = ["spin_no_std"] }
log = "0.4.11"
cortex-m-log = { version = "0.8.0", features = ["log-integration"] }
cfg-if = "1.0.0"
embedded-sdmmc = "0.7.0"



[features]
default = ["rt", "stm32g473"]
rt = ["stm32g4/rt"]
stm32g431 = ["stm32g4/stm32g431"]
stm32g441 = ["stm32g4/stm32g441"]
stm32g471 = ["stm32g4/stm32g471"]
stm32g473 = ["stm32g4/stm32g473"]
stm32g474 = ["stm32g4/stm32g474"]
stm32g483 = ["stm32g4/stm32g483"]
stm32g484 = ["stm32g4/stm32g484"]
stm32g491 = ["stm32g4/stm32g491"]
stm32g4a1 = ["stm32g4/stm32g4a1"]
log-itm = ["cortex-m-log/itm"]
log-rtt = []
log-semihost = ["cortex-m-log/semihosting"]
defmt-logging = ["defmt"]

[profile.dev]
codegen-units = 1
debug = true
incremental = false
lto = false

[profile.release]
debug = false
codegen-units = 1
incremental = false
lto = true


