[package]
name = "custom_hal_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "custom_hal_api"
crate-type = ["lib"]


[dependencies.nb]
version = "1.1.0"

[dependencies.void]
version = "1.0.2"
default-features = false
