[package]
name = "custom_hal_api"
version = "0.1.0"
edition = "2021"
authors = ["Wybren van den Akker"]
categories = ["embedded", "hardware-support", "no-std"]
license="MIT/Apache-2.0"
homepage = "https://www.aemics.nl"
description = "Compatibility support for HAL STM32G473"
keywords = ["arm", "cortex-m", "stm32g4xx", "hal"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "custom_hal_api"
crate-type = ["lib"]


[dependencies.nb]
version = "1.1.0"

[dependencies.void]
version = "1.0.2"
default-features = false

[dependencies.embedded-hal]
version = "0.2.7"
